# docnotes

./: circles.py
JS/: example.html  mapper.css  mapper.html
OS/: #*shell*#  boot.s  commands.txt  init_idt.c  kern.ld  kern.sh  kernel.c  keyboard.c  loader.s  play.s
OS/basic/: README.md  executor.c  executor.h  executor.s  (+16 more)
algorithms/: expressions2.c
android/: Activity1.cs  Game1.cs  android.csproj  android.sln
books/: analyzer.cpp  english_words.txt  final.py  gen_words_dict.py  gutenberg_controller.py  out
curses/: .#base.py  base.py
games/: map.h  map.h~  world.txt
games/rpg/: CMakeLists.txt  CMakeLists.txt.user.c8ad3c5  CMakeSettings.json  a.out  controller.cpp  controller.h  main.c  main.cpp  screen.cpp  screen.h  view.h  world.c  world.cpp  world.h
map_tool/: Game1.cs  Program.cs  app.manifest  map_tool.csproj  map_tool.sln
money/: debtsnowball  debtsnowball.gpg  makepayment.sh  ramsey.gpg  totaller.sh  totaller.sh.save
mqtt_proxy/: ca.crt  ca.key  mqttproxy_config.py  proxy.py  readme.txt  rootCA.crt  ssl_proxy.py
networkmanager/: nmscripts
pynotes/: handytricks  handytricks~  tkinter.notes
pyqt_scratchpad/: Adddlg.py  DownloadManager.py  download_factory.py  download_obect.py  downloader.py  downloadobect.py  http_download.py  http_downloader.py  notes  pyqt_basic.py  scratch.py
security/: gui.py  network_server.py
ssl_scripts/: eekey.pem  example.csr  genonequick.sh  genrootca.sh  genserverpair.sh  openssl.int.cnf  openssl.root.cnf  openssl.ss.cnf
usb-rndis-pi0/: gadget.sh  readme.md
z80/: Readme.md  pico_vga.c  pio_notes.txt  pio_notes.txt~  z80io.py
z80/c/: .z80io.pio.swp  CMakeLists.txt  changes.txt  example.bas  just_dma_vga.c  no_dma_vga.c  rgb.pio  sync.pio  vga.c  z80io.pio
z80/whypio/: CMakeLists.txt  z80io.c  z80io.pio
(+139 files in other folders)
